fix category count not centered in border

--- a/static/css/add-on.css
+++ b/static/css/add-on.css
@@ -96,11 +96,14 @@ body.is-menu-visible {
 }
 
 #categories .category_count {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border: solid 1px rgba(160, 160, 160, 0.3);
   border-radius: 100%;
   width: 25px;
   height: 25px;
-  text-align: center;
+  transform: translateY(3px);
 }
 
 .stats .post_category {
